// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssestFactory > assumes default head position for assets if the asset does not specify 1`] = `
[
  <link
    href="/src/"
    rel="stylesheet"
  />,
]
`;

exports[`AssestFactory > constructs link asset 1`] = `
[
  <link
    href="/src/"
    rel="stylesheet"
  />,
]
`;

exports[`AssestFactory > constructs multiple assets of different types 1`] = `
[
  <link
    href="/src/"
    rel="stylesheet"
  />,
  <script
    src="/src/"
    type="text/javascript"
  />,
]
`;

exports[`AssestFactory > constructs script asset 1`] = `
[
  <script
    src="src/"
    type="text/javascript"
  />,
]
`;

exports[`AssestFactory > creates list in order of asset priority 1`] = `
[
  <link
    data-priority="2"
    href="/src2/"
    rel="stylesheet"
  />,
  <script
    data-priority="1"
    src="/src/"
    type="text/javascript"
  />,
]
`;

exports[`AssestFactory > ignores the asset if it does not match the position argument 1`] = `
[
  <link
    href="/src/"
    rel="stylesheet"
  />,
]
`;
